Added PHP 7.4 requirement.
Also added tests autoloading.

--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,18 @@
 	],
 	"autoload" : 
 	{
-		"psr-4" : 
-		{
-			"Mistralys\\VersionParser\\" : "src/"
-		},
-		"classmap" : 
+		"classmap" :
 		[
 			"src/"
 		]
+	},
+	"autoload-dev": {
+		"classmap": [
+			"tests/classes"
+		]
+	},
+	"require": {
+		"php": ">=7.4"
 	},
 	"require-dev" : 
 	{
